swap bias-control and power-target-control, fix overlap with fixed-bottom

--- a/src/css/flux.css
+++ b/src/css/flux.css
@@ -542,8 +542,8 @@ svg {
 #home-page-wrapper {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 50px 2.5fr 1fr 1fr 98px 100px;
-    height: 100vh;
+    grid-template-rows: 50px 2.5fr 1fr 1fr auto;
+    height: calc(100vh - 10em - 10px);
 }
 
 #compatibility--cont {
@@ -2846,7 +2846,8 @@ and (max-width: 340px)
 and (max-height: 620px) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 40px 2fr 1fr 1fr 70px 80px;
+        grid-template-rows: 40px 2fr 1fr 1fr auto;
+        height: calc(100vh - 8em - 10px);
     }
 
     .data-tiles {
@@ -2959,7 +2960,8 @@ and (min-height: 1024px)
 and (orientation: portrait) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 50px 2.5fr 1fr 1fr 108px 100px;
+        grid-template-rows: 50px 2.5fr 1fr 1fr auto;
+        height: calc(100vh - 10em - 10px);
     }
 
     .data-tiles {
@@ -3045,7 +3047,8 @@ and (min-width: 1024px)
 and (min-height: 768px) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 50px 2fr 1fr 1fr 98px 100px;
+        grid-template-rows: 50px 2fr 1fr 1fr auto;
+        height: calc(100vh - 10em - 10px);
     }
 
     .data-tiles {
@@ -3063,7 +3066,8 @@ and (min-width: 1024px)
 and (min-height: 1366px) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 50px 2.5fr 1fr 1fr 108px 100px;
+        grid-template-rows: 50px 2.5fr 1fr 1fr auto;
+        height: calc(100vh - 10em - 10px);
     }
 
     .data-tiles {
